# card_market_intelligence_dashboard

./: .env.example  .gitignore  README.md  conftest.py  docker-compose.yml  parse_variant.sh  psql_launcher.ps1  psql_launcher.sh  pyproject.toml  render.yaml
.\ingestion\api_output/: parse_test_01_charizard_black_dot.json  parse_test_02_red_cheek_pikachu.json  parse_test_03_blastoise_shadowless.json  parse_test_04_machamp_first_edition.json  parse_test_05_dark_arbok_wizards.json  parse_test_06_pikachu_simple.json
.github/workflows/: ingest.yml  test.yml
api/: Dockerfile  alembic.ini  database.py  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh
api/alembic/: env.py
api/assets/: collection_template.xlsx  mock_collection.xlsx
api/models/: __init__.py  canonical.py  card.py  collection_session.py  condition_multiplier.py  palette_color.py  set.py  set_identifier.py  watermark.py
api/routers/: __init__.py  cards.py  collection.py  health.py  palette.py  reference.py  sets.py  trends.py
api/schemas/: __init__.py  card.py  collection.py  palette.py  reference.py  set.py  trends.py
api/scripts/: generate_collection_template.py  generate_mock_collection.py
api/services/: __init__.py  collection_annotator.py  collection_excel.py  collection_pricing.py  collection_session.py  collection_template.py  collection_validator.py  variant_normalizer.py  xlsx_patcher.py
api/tests/: conftest.py  test_collection_annotator.py  test_collection_excel.py  test_collection_pricing.py  test_collection_session.py  test_collection_template.py  test_collection_validator.py  test_database.py  test_main.py  test_routers_cards.py  test_routers_collection.py  test_routers_palette.py  test_routers_reference.py  test_routers_sets.py  test_routers_trends.py  test_smoke.py  test_variant_normalizer.py
docs/: DEVELOPMENT_SETUP.md  INGESTION.md  MILESTONE_1.md  MILESTONE_2.md  MISC_IMPROVEMENTS.md  POKEMON_PRICE_TRACKER_API.md  PROJECT_OVERVIEW.md  tcgdex_api_specs.md
docs/MILESTONE_3/: DONE-M03_S01-ImplementSetMappingTable.md  DONE-M03_S03-FrontendShell.md  DONE-M03_S04-SetAndCardViews.md  DONE-M03_S05-IngestNewSets.md  DONE-M03_S06-CardTableFiltersAndSorting.md  DONE-M03_S08-Cleanup.md  DONE-M03_S09-EnhancePriceSnapshotIngestion.md  M03_S02-ImproveCardMatchingLogs.md  M03_S05-IngestNewSets.md  M03_S07-ColdStartLoadingExperience.md  M03_S08-Cleanup  M03_S08-Cleanup.md  MILESTONE_6_PLUS_ROADMAP.md
docs/MILESTONE_4/: DONE-M04_S01-ConditionMultiplierAnalysis.md  DONE-M04_S02-UserCollectionUpload.md  DONE-M04_S05-ExcelWorkbookPopulation.md  M04_S02-UserCollectionUpload.md  M04_S03-CollectionDashboard.md  M04_S04-CollectionDashboardSlicers.md  M04_S06-ExcelTemplateDesign.md  M04_S06-Phases.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  run.ps1  run.sh  vite.config.js  vitest.config.js
frontend/src/: App.vue  main.js
frontend/test/: setup.js
ingestion/: Dockerfile  cleanup_sessions.py  fetch_historic_data.ps1  loader.py  logging_setup.py  pokemonpricetracker.py  pokemontcg.py  ppt_api.ps1  ppt_api_get_set.ps1  pyproject.toml  refresh_multipliers.py  requirements.txt  run.py  run_ingest.ps1  run_ingest.py  run_ingest.sh  run_prices.ps1  run_prices.sh  run_refresh_multipliers.py  run_refresh_multipliers.sh  set_resolver.py  tcgdex.py  tcgdex_api_get_set.ps1  watermark.py
ingestion/tests/: conftest.py  test_cleanup_sessions.py  test_loader.py  test_logging_setup.py  test_pokemonpricetracker.py  test_refresh_multipliers.py  test_run.py  test_run_ingest.py  test_run_refresh_multipliers.py  test_set_resolver.py  (+3 more)
tools/: test.sh
(+59 files in other folders)
