# Top-level project for running the test suite across api/ and ingestion/.
#
# api/pyproject.toml and ingestion/pyproject.toml stay as-is -- those are
# what Render uses to deploy each service. This root file only exists so
# `uv sync` builds one virtualenv that can import both packages, and so
# pytest + coverage can produce a single combined report.
#
# Why duplicate the dependency lists rather than use uv workspaces? Both
# api/ and ingestion/ use bare imports (`from database import ...`,
# `from loader import ...`) which assume their own directory is on sys.path.
# That's fine for production where each service runs from its own dir, but
# uv workspaces would treat them as installable packages with a single
# combined import root, breaking those bare imports. Listing the deps here
# and adding the dirs to sys.path via conftest is the path of least
# resistance.

[project]
name = "card-market-tests"
version = "0.0.0"
description = "Top-level dev environment for running tests across api/ and ingestion/."
requires-python = ">=3.11"
dependencies = [
    # API deps (mirrored from api/pyproject.toml).
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    # Ingestion deps (mirrored from ingestion/pyproject.toml).
    "requests==2.32.2",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "pytest-mock==3.14.0",
    "responses==0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["api/tests", "ingestion/tests"]
# importlib mode lets us have test_smoke.py in both api/tests and
# ingestion/tests without collision, and works without __init__.py files
# in the tests directories. Pytest treats each test file as a unique
# module by file path rather than by import name.
addopts = "--import-mode=importlib"
filterwarnings = [
    # Treat unknown warnings as errors so we catch regressions, but allow
    # known noisy DeprecationWarnings from third-party deps.
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # anyio leaks MemoryObjectReceiveStream cleanup warnings when a
    # FastAPI lifespan raises during startup -- our test_main lifespan-failure
    # test deliberately raises, and the leak is internal to anyio.
    "ignore::ResourceWarning",
]

[tool.coverage.run]
branch = true
source = ["api", "ingestion"]
# `relative_files = true` records paths relative to the working dir so the
# omit globs below can use simple project-relative patterns (and so the
# report stays readable instead of dumping absolute homedir paths).
relative_files = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    # Auto-generated migrations are not application code.
    "api/alembic/versions/*",
    # Alembic env scaffolding is generated by `alembic init` and exercised
    # only by alembic itself.
    "api/alembic/env.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
# Mirror the run-level omit list. coverage applies omit at both collection
# and report time, but the report list is what controls whether files
# show up in the rendered output.
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "api/alembic/versions/*",
    "api/alembic/env.py",
]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "raise AssertionError",
    "\\.\\.\\.",
]
